--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-DB_DRIVER=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=hubla
-WEB_SERVER_PORT=8000
+# DB_DRIVER=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_USER=root
+# DB_PASSWORD=root
+# DB_NAME=hubla
+# WEB_SERVER_PORT=8000
+JWT_SECRET=secret
+JWT_EXPIRESIN=300
