--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ jobs:
   CI:
     runs-on: ubuntu-latest
     
-#     steps:
-#       - uses: actions/checkout@v3.5.2
-#       - name: DockerHub Authentication
-#         uses: docker/login-action@v2.1.0
-#         with:
-#           username: ${{secrets.DOCKERHUB_USER}}
-#           password: ${{secrets.DOCKERHUB_PWD}}
+    steps:
+      - uses: actions/checkout@v3.5.2
+      - name: DockerHub Authentication
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
 #       - name: Run tests
 #         run: go test -v ./...
 #       - name : Docker Image Building
