--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,14 @@ jobs:
         with:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
-#       - name: Run tests
-#         run: go test -v ./...
-#       - name : Docker Image Building
-#         uses: docker/build-push-action@v4.0.0
-#         with:
-#           context: ./
-#           file: ./Dockerfile
-#           push: true
-#           tags: |
-#             mrpsousa/api-go-hubla:v${{github.run_number}}
-#             mrpsousa/api-go-hubla:latest
+      - name: Run tests
+        run: go test -v ./...
+      - name : Docker Image Building
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: |
+            mrpsousa/api-go-hubla:v${{github.run_number}}
+            mrpsousa/api-go-hubla:latest
