--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
       - uses: actions/checkout@v3.5.2
       - name: DockerHub Authentication
         uses: docker/login-action@v2.1.0
-        with:
-          username: ${{secrets.DOCKERHUB_USER}}
-          password: ${{secrets.DOCKERHUB_PWD}}
-      - name: Run tests
-        run: go test -v ./...
-      - name : Docker Image Building
-        uses: docker/build-push-action@v4.0.0
+#         with:
+#           username: ${{secrets.DOCKERHUB_USER}}
+#           password: ${{secrets.DOCKERHUB_PWD}}
+#       - name: Run tests
+#         run: go test -v ./...
+#       - name : Docker Image Building
+#         uses: docker/build-push-action@v4.0.0
         with:
           context: ./
           file: ./Dockerfile
