--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,15 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Imagem Build 
-        uses: docker/build-push-action@v3.2.0
+      - name: DockerHub Authentication
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
+      - name: Run tests
+        run: go test -v ./...
+      - name : Docker Image Building
+        uses: docker/build-push-action@v4.0.0
         with:
           context: ./
           file: ./Dockerfile
@@ -19,22 +26,3 @@ jobs:
           tags: |
             mrpsousa/api-go-hubla:v${{github.run_number}}
             mrpsousa/api-go-hubla:latest
-
-# steps:
-#       - uses: actions/checkout@v3.5.2
-#       - name: DockerHub Authentication
-#         uses: docker/login-action@v2.1.0
-#         with:
-#           username: ${{secrets.DOCKERHUB_USER}}
-#           password: ${{secrets.DOCKERHUB_PWD}}
-#       - name: Run tests
-#         run: go test -v ./...
-#       - name : Docker Image Building
-#         uses: docker/build-push-action@v4.0.0
-#         with:
-#           context: ./
-#           file: ./Dockerfile
-#           push: true
-#           tags: |
-#             mrpsousa/api-go-hubla:v${{github.run_number}}
-#             mrpsousa/api-go-hubla:latest
