--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,19 @@ jobs:
           tags: |
             mrpsousa/api-go-hubla:v${{github.run_number}}
             mrpsousa/api-go-hubla:latest
+  CD:
+      runs-on: ubuntu-latest
+      needs: [CI]
+      steps:
+        - uses: actions/checkout@v3.5.2
+        - name: Definition of Context 
+          uses: Azure/k8s-set-context@v3.0
+          with:
+            method: kubeconfig
+            kubeconfig: ${{secrets.K8S_CONFIG}}
+        - name: Deploy to Kubernetes cluster
+          uses: Azure/k8s-deploy@v4.9
+          with: 
+            images: mrpsousa/api-go-hubla:v${{github.run_number}}
+            manifests: |
+              k8s/deployment.yaml
